# nix-serve-rs

./: .gitignore  Cargo.toml  README.md  config.toml  flake.nix  module.nix  shell.nix
.github/workflows/: rust.yml
src/: buildlog.rs  cacheinfo.rs  config.rs  daemon.rs  error.rs  health.rs  lib.rs  main.rs  nar.rs  narinfo.rs  root.rs  routes.rs  server.rs  signing.rs  store.rs  version.rs
src/crypto/: base32.rs  mod.rs  signing.rs
src/nix/: daemon.rs  daemon_protocol.rs  mod.rs  nar.rs  path_info.rs  store.rs  store_socket.rs
src/routes/: build_log.rs  cache_info.rs  health.rs  mod.rs  nar.rs  narinfo.rs  root.rs  version.rs
