[package]
name = "nix-serve-rs"
version = "0.1.0"
edition = "2021"
authors = ["liberodark"]
description = "A high-performance Nix binary cache server implemented in pure Rust"
license = "GPL-3.0"
repository = "https://github.com/liberodark/nix-serve-rs"
keywords = ["nix", "cache", "server", "binary-cache"]
categories = ["command-line-utilities", "web-programming::http-server"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["codec", "io-util"] }
tokio-stream = "0.1.14"
hyper = { version = "1.1.0", features = ["full"] }
http = "1.0.0"
http-body = "1.0.0"
http-body-util = "0.1.0"
hyper-util = { version = "0.1.2", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.0", features = ["trace", "compression-gzip", "compression-zstd", "cors", "fs"] }
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
toml = "0.8.8"
ed25519-dalek = "2.1.1"
sha2 = "0.10.7"
base64 = "0.21.5"
data-encoding = "2.4.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
clap = { version = "4.4.10", features = ["derive", "env"] }
bytes = "1.5.0"
futures = "0.3.29"
async-stream = "0.3.5"
tempfile = "3.8.1"
mime = "0.3.17"
mime_guess = "2.0.4"
percent-encoding = "2.3.0"
range-parser = "0.1.0"
hex = "0.4.3"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
httpc-test = "0.1.7"
tempfile = "3.8.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "deny"
unused_imports = "deny"
