[package]
name = "nix-serve-rs"
version = "0.1.0"
edition = "2021"
authors = ["liberodark"]
description = "A high-performance Nix binary cache server implemented in Rust"
repository = "https://github.com/liberodark/nix-serve-rs"
license = "GPL-3.0"
keywords = ["nix", "cache", "server", "binary-cache"]
categories = ["web-programming::http-server"]

[dependencies]
tokio = { version = "1.28", features = ["full"] }
tokio-util = { version = "0.7", features = ["io"] }
tokio-stream = "0.1"
futures = "0.3"
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http = "1.0"
http-body = "1.0"
http-body-util = "0.1"
http-range = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7"
anyhow = "1.0"
thiserror = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ed25519-dalek = "2.0"
base64 = "0.21"
hex = "0.4"
clap = { version = "4.3", features = ["derive", "env"] }
bytes = "1.4"
tempfile = "3.6"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.3"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = 3

[[bin]]
name = "nix-serve-rs"
path = "src/main.rs"
